Bug 48706 - EDITING: $.12 is treated as text instead of currency value
Summary: EDITING: $.12 is treated as text instead of currency value
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:3.6.0 target:25.2.0
Keywords:
Depends on:
Blocks: 39868
  Show dependency treegraph
 
Reported: 2012-04-14 17:35 UTC by Eike Rathke (retired, only occasionally showing up)
Modified: 2024-06-18 15:35 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eike Rathke (retired, only occasionally showing up) 2012-04-14 17:35:57 UTC
$0.12 is accepted as currency value
$.12 is not accepted as currency value, but should
Same in CSV file import.
Comment 1 Not Assigned 2012-04-14 17:40:51 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a6ad8e8f0a52881311b16af611e1ad701946c608

resolved fdo#48706 recognize $.12 as currency number
Comment 2 Commit Notification 2024-06-18 15:35:38 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/60fb7edc6dc485870b944e5981dd38d02a718e9e

tdf#48706: svl_qa_cppunit: Add unittest

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.