resolved fdo#48706 recognize $.12 as currency number